# hoshinova

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  config.example.toml  shell.nix
.cargo/: config.toml
.github/workflows/: build.yml  docker.yml
src/: config.rs  main.rs
src/module/: mod.rs  recorder.rs  scraper.rs
src/module/notifier/: discord_notifier.rs  mod.rs  slack_notifier.rs
src/module/web/: handler.rs  mod.rs
src/youtube/: mod.rs
web/: package.json
web/src/: main.tsx
web/src/api/: config.ts  tasks.ts
web/src/pages/: ConfigPage.tsx  TasksPage.tsx
web/src/shared/: SuspenseLoader.tsx
