[package]
name = "hoshinova"
version = "0.2.5"
edition = "2021"
repository = "https://github.com/HoloArchivists/hoshinova"
homepage = "https://github.com/HoloArchivists/hoshinova"

[package.metadata.cross.target.x86_64-pc-windows-gnu]
image = "ghcr.io/cross-rs/x86_64-pc-windows-gnu:edge"

[dependencies]
# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.44.2", features = ["full"] }

# Web
actix-web = "4"
reqwest = { version = "0.11", default-features = false, features = [
  "gzip", "json", "rustls-tls"
] }
mime_guess = "2"

# Utilities
anyhow = "1.0"
lazy_static = "1.5.0"
rust-embed = "6.8.1"
ts-rs = { version = "9.0.1", features = ["chrono-impl", "no-serde-warnings"] }
url = "2.5.4"

# Serde
humantime = "2.2.0"
humantime-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
quick-xml = { version = "0.23", features = ["serialize"] }
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1"
serde_regex = "1.1.0"
serde_json = "1.0"

# CLI
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"

[dev-dependencies]
tempfile = "3.19.1"

[build-dependencies]
chrono = "0.4.41"

[profile.release]
lto = true
strip = true
